@@ -1,3 +1,12 @@
+2006-01-23  A Balamurugan  <bala@zresearch.com>
+
+	* fish/src/scm-procedures.c (ex_sel_get_first_entry_raw,
+	ex_sel_get_next_entry_raw, ex_sel_get_first_entry_hex,
+	ex_sel_get_next_entry_hex, ex_sel_get_info_binary,
+	ex_sel_get_first_entry, ex_sel_get_next_entry,
+	ex_sel_delete_entry, ex_sel_clear, ex_sel_get_clear_status):
+	display appropriate error/warning messages.
+
 2006-01-23  Albert Chu <chu11@llnl.gov>
 
 	* rmcpping/src/rmcpping.c (createpacket, parsepacket): Fix typos.
